Added Database functionality with fixed data for now

--- a/quickChart/src/main/resources/templates/Chart.html
+++ b/quickChart/src/main/resources/templates/Chart.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="result" th:if="${get}">
-            <img class='img-thumbnail' style=" width: 800px;height: 500px; object-fit: fill;" th:src="${chart}" alt="Chart"/>
+            <img class='img-thumbnail' style=" object-fit: fill;" th:src="${chart}" alt="Chart"/>
         </div>
     </div>
 </section>
