--- a/quickChart/src/main/resources/templates/CreateChart.html
+++ b/quickChart/src/main/resources/templates/CreateChart.html
@@ -42,7 +42,7 @@
             <p class="message">Created new chart!</p>
             <p class="message"> chart URL :  <span th:text="${chartUrl}"></span></p>
             <div class="message">
-                <img class='img-thumbnail' style=" width: 800px;height: 500px; object-fit: fill;" th:src="${chartUrl}" alt="Chart"/>
+                <img class='img-thumbnail' style="object-fit: fill;" th:src="${chartUrl}" alt="Chart"/>
             </div>
         </div>
     </div>
