--- a/quickChart/src/main/resources/templates/CreateChart.html
+++ b/quickChart/src/main/resources/templates/CreateChart.html
@@ -3,57 +3,112 @@
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="all"
-          href="../../css/Style.css" th:href="@{/css/Style.css}" />
+          href="../../css/Style.css" th:href="@{/css/post_chart.css}" />
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 </head>
-<body>
-<header>
-    <div class="container">
-        <div class="welcome-banner">
-            <h1>Welcome to Chart Repository Service</h1>
-        </div>
-    </div>
-</header>
+<body class="bg-light text-center">
 
 <a th:href="@{/chart/}"  style="--i: 0.05s;">Home</a>
 
-<section class="my-5">
-    <div class="container">
-        <div class="input-label">
-            <h2>Charts</h2>
-        </div>
 
-        <div class="create">
-            <form class="create-form" action="#" method="post" th:action="@{/chart/create}" th:object="${chart}">
-                <input placeholder="title" type="text" th:field="*{title}" /><br>
-                <input placeholder="width" type="text" th:field="*{width}" /><br>
-                <input placeholder="height" type="text" th:field="*{height}" /><br>
-                <select id="chartType" class="form-control" th:field="*{type}">
-                    <option value="" disabled selected>--Select--</option>
-                    <option value="bar">bar</option>
-                    <option value="line">line</option>
-                    <option value="pie">pie</option>
-                </select><br>
-                <input placeholder="label1" type="text" th:field="*{label1}" /><br>
-                <input placeholder="label2" type="text" th:field="*{label2}" /><br>
-                <input placeholder="label3" type="text" th:field="*{label3}" /><br>
-                <input placeholder="label4" type="text" th:field="*{label4}" /><br>
+<div class="container-fluid">
+    <div class="row">
+        <div class="chart col-md-offset-3 col-md-6 col-sm-6 col-xs-12">
+            <h2 class="text-center">Create a chart</h2><hr>
+
+            <form class="form-horizontal form-postInfo" id="chart-form" role="form" action="#" method="post" th:action="@{/chart/create}" th:object="${chart}">
+                <div class="form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Chart title :</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <input placeholder="title" class="form-control" type="text" th:field="*{title}" />
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Width :</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <input placeholder="width" class="form-control" type="text" th:field="*{width}" />
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Height :</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <input placeholder="height" class="form-control" type="text" th:field="*{height}" />
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Type :</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <select id="chartType" class="form-control" th:field="*{type}">
+                            <option value="" disabled selected>--Select--</option>
+                            <option value="bar">bar</option>
+                            <option value="line">line</option>
+                            <option value="pie">pie</option>
+                        </select><br>
+                    </div>
+                </div>
+                <div class="labels-group form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Label :</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <div class="input-group control-group">
+                            <input placeholder="label" class="form-control" type="text" name="labels[]" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-success add-labels" type="button">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group" id="dataset">
+                    <h2>Dataset:</h2>
+                </div>
+                <div class="dataset-group form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Value :</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <div class="input-group control-group">
+                            <input placeholder="data" class="form-control" type="text" name="dataSet[]" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-success add-dataset" type="button">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group" id="submit-btn">
+                    <div class="col-md-6 col-sm-6 col-xs-6 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 text-center">
+                        <button type="submit" class="btn btn-lg btn-success btn-block submit">Create</button>
+                    </div>
+                </div>
+
+<!--
                 <input placeholder="value1" type="text" th:field="*{value1}" /><br>
                 <input placeholder="value2" type="text" th:field="*{value2}" /><br>
                 <input placeholder="value3" type="text" th:field="*{value3}" /><br>
                 <input placeholder="value4" type="text" th:field="*{value4}" /><br>
-                <input type="submit" class="create-btn" value="CREATE" />
+                <input type="submit" class="create-btn" value="CREATE" />-->
             </form>
-        </div>
 
-        <div class="result" th:if = "${posted}">
-            <p class="message">Created new chart!</p>
-            <p class="message"> chart URL :  <span th:text="${chartUrl}"></span></p>
-            <div class="message">
-                <img class='img-thumbnail' style="object-fit: fill;" th:src="${chartUrl}" alt="Chart"/>
+
+            <div class="result" th:if = "${posted}">
+                <p class="message">Created new chart!</p>
+                <p class="message"> chart URL :  <span th:text="${chartUrl}"></span></p>
+                <div class="message">
+                    <img class='img-thumbnail' style="object-fit: fill;" th:src="${chartUrl}" alt="Chart"/>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</div>
+
 </body>
 </html>
