Spring security Config files

--- a/quickChart/src/main/resources/templates/Home.html
+++ b/quickChart/src/main/resources/templates/Home.html
@@ -35,8 +35,18 @@
 <!--</form>-->
 
 
-<form th:action="@{/chart/login}" method="POST"> Login to Journal
-    <input type="submit" value="Login"/>
+<!--<form th:action="@{/chart/login}" method="POST"> Login to Journal-->
+<!--    <input type="submit" value="Login"/>-->
+<!--</form>-->
+
+<!--<form th:action="@{/chart/logout}" method="POST"> Logout-->
+<!--    <input type="submit" value="logout"/>-->
+<!--</form>-->
+
+<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Logout" />
 </form>
 </body>
 </html>
