--- a/quickChart/src/main/resources/templates/Home.html
+++ b/quickChart/src/main/resources/templates/Home.html
@@ -17,7 +17,9 @@
     </div>
 </header>
 
-
+<form th:action="@{/chart/Signup}" method="post">
+    <input type="submit" value="Signup" />
+</form>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Logout" />
 </form>
