--- a/quickChart/src/main/resources/templates/CreateChart.html
+++ b/quickChart/src/main/resources/templates/CreateChart.html
@@ -51,7 +51,8 @@
                             <option value="" disabled selected>--Select--</option>
                             <option value="bar">bar</option>
                             <option value="line">line</option>
-                            <!--<option value="pie">pie</option>-->
+                            <option value="pie">pie</option>
+                            <option value="doughnut">doughnut</option>
                         </select><br>
                     </div>
                 </div>
