--- a/quickChart/src/main/resources/templates/PieDataset.html
+++ b/quickChart/src/main/resources/templates/PieDataset.html
@@ -16,7 +16,6 @@
 
 <a th:href="@{/chart/}"  style="--i: 0.05s;">Home</a>
 
-
 <div class="container-fluid">
     <div class="row">
         <div class="chart col-md-offset-3 col-md-6 col-sm-6 col-xs-12">
@@ -66,27 +65,19 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Border Color</label>
-                    <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input class="form-control" type="color" th:field="*{dataSet.border_color}" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Background Color</label>
-                    <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input class="form-control" type="color" th:field="*{dataSet.background_color}" />
-                    </div>
-                </div>
-                <div class="form-group">
                     <label class="control-label col-md-3 col-sm-3 col-xs-3">Border Width</label>
                     <div class="col-md-8 col-sm-8 col-xs-8">
                         <input class="form-control" type="number" min="1" th:field="*{dataSet.borderWidth}" />
                     </div>
                 </div>
-               <div class="dataset-group form-group" th:each="label, stat : *{labels}">
-                    <label class="control-label col-md-3 col-sm-3 col-xs-3"><span th:text="${label}"></span> </label>
+                <div class="dataset-group form-group" th:each="label, stat : *{labels}">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3"><span th:text="${label}"></span></label>
                     <div class="col-md-8 col-sm-8 col-xs-8">
                         <input placeholder="data" class="form-control" type="text" th:field="*{dataSet.data}" required />
+                    </div>
+                    <label class="control-label col-md-3 col-sm-3 col-xs-3">Color</label>
+                    <div class="col-md-8 col-sm-8 col-xs-8">
+                        <input class="form-control" type="color" th:value="*{dataSet.backgroundColors}" th:field="*{dataSet.backgroundColors[__${stat.index}__]}" />
                     </div>
                 </div>
                 <div class="form-group" id="submit-btn">
