--- a/quickChart/src/main/resources/templates/Home.html
+++ b/quickChart/src/main/resources/templates/Home.html
@@ -3,39 +3,30 @@
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="all"
-          href="../../css/Style.css" th:href="@{/css/Style.css}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body class="bg-light text-center">
+<div th:insert="nav-bar :: nav"></div>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col">
 
-<header>
-    <div class="container">
-        <div class="welcome-banner">
-            <h1>Welcome to Chart Repository Service</h1>
-            <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+            <div class="row">
+                <div class="col pb-2 mt-4 mb-2 border-bottom">
+                    <h2>Welcome to Chart Repository Service</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+                </div>
+            </div>
         </div>
     </div>
-</header>
-
-<form th:action="@{/chart/Signup}" method="post">
-    <input type="submit" value="Signup" />
-</form>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Logout" />
-</form>
-
-<section class="my-5">
-    <div class="container">
-        <div class="input-label">
-            <h2>Charts</h2>
-        </div>
-
-        <a th:href="@{/chart/Post}"  style="--i: 0.05s;">Post a chart</a>
-
-        <hr>
-
-    </div>
-</section>
-
+</div>
 </body>
 </html>
